<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="com.derek_s.cursor.ActMain">

    <item android:id="@+id/action_night_mode"
        android:title="@string/night_mode"
        android:orderInCategory="1"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear"
        android:title="@string/clear_text"
        android:orderInCategory="3"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_copy_all"
        android:title="@string/copy_all"
        android:orderInCategory="4"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:orderInCategory="5"
        app:showAsAction="never" />
</menu>
